# timetableBot

./: .gitignore  README.md  telegramBot.cabal
.devcontainer/: Dockerfile  devcontainer.json
app/: BotLogic.hs  Main.hs
app/calendar/: Calendar.hs  EventFormater.hs  ICalParser.hs  Parser.hs
app/persist/: Persist.hs  PersistDatabase.hs  PersistFile.hs
src/persist/: Persist.hs  PersistDatabase.hs  PersistFile.hs
test/: BotLogicTest.hs  MainTest.hs  PersistDatabaseTest.hs
test/calendar/: CalendarTest.hs  EventFormaterTest.hs  ICalParserTest.hs
